--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
+42cc-pystyle==0.0.16
+dj-database-url==0.5.0
 Django==1.6.7
-42cc-pystyle
-South==1.0.2
+django-heroku==0.3.1
+flake8==2.6.2
+gunicorn==19.9.0
+mccabe==0.5.3
 Pillow==5.1.0
+psycopg2==2.7.5
+pycodestyle==2.0.0
+pyflakes==1.2.3
+South==1.0.2
+whitenoise==3.3.1
