--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
+Django==1.6.7
+42cc-pystyle42cc-pystyle==0.0.16
+dj-database-url==0.5.0
+dj-static==0.0.6
+Django==1.6.7
+django-toolbelt==0.0.1
+flake8==2.6.2
+gunicorn==19.9.0
+mccabe==0.5.3
+psycopg2==2.7.5
+pycodestyle==2.0.0
+pyflakes==1.2.3
+static3==0.7.0
 42cc-pystyle==0.0.16
 dj-database-url==0.5.0
 dj-static==0.0.6
@@ -6,7 +19,7 @@ django-toolbelt==0.0.1
 flake8==2.6.2
 gunicorn==19.9.0
 mccabe==0.5.3
-Pillow==5.1.0
+Pillow==5.2.0
 psycopg2==2.7.5
 pycodestyle==2.0.0
 pyflakes==1.2.3
